--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/material-top-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
+    "@reduxjs/toolkit": "^1.5.1",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
@@ -26,6 +27,7 @@
     "react-native-screens": "^3.1.1",
     "react-native-tab-view": "^2.16.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-redux": "^7.2.4",
     "update": "^0.7.4"
   },
   "devDependencies": {
