--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,6 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
-
+pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 platform :ios, '10.0'
 
 target 'MyApp' do
@@ -21,9 +21,9 @@ target 'MyApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  # use_flipper!()
 
-  post_install do |installer|
-    react_native_post_install(installer)
-  end
+  # post_install do |installer|
+  #   react_native_post_install(installer)
+  # end
 end
